@@ -11,6 +11,9 @@ version = 0.03
 [Prereqs / RuntimeRequires]
 Path::Tiny = 0.104
 
+[Prereqs / RuntimeRecommends]
+Date::Easy = 0.06
+
 ; AutoPrereqs is properly picking up Test::Most.
 ; And Test::Most has Test::Differences as a prereq.
 ; So I have no idea why I have to specify this explicitly,
